--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,6 +32,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular/animations": "~10.2.0",
+    "@angular/cli": "~10.2.0",
     "@angular-devkit/build-angular": "~0.1002.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -46,7 +48,8 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   },
   "engines": {
     "node": "14.15.5",
