--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/compiler-cli": "~10.2.0",
+    "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
     "@angular/platform-browser": "~10.2.0",
@@ -32,8 +33,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/animations": "~10.2.0",
     "@angular/cli": "~10.2.0",
+    "@angular/compiler-cli": "~10.2.0",
     "@angular-devkit/build-angular": "~0.1002.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -48,8 +49,8 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "tslint": "~6.1.0"
   },
   "engines": {
     "node": "14.15.5",
